# Grade-Sight

./: .gitignore  .prettierignore  CLAUDE.md  README.md  compose.yaml  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
apps/api/: .env.example  Dockerfile  package.json  pyproject.toml  railway.json  start.sh
apps/api/alembic/: env.py
apps/api/alembic/versions/: 03d875d9c97a_add_error_taxonomy_tables.py  19af2d227f34_drop_student_dob.py  45ec09b0d696_add_answer_key_pages_and_engine_modes.py  5431a34d0363_make_subscription_datetime_columns_.py  7015f412ba44_add_assessment_pages_table_and_backfill.py  9060aa9c10aa_add_stripe_billing.py  aa1af53df147_drop_legacy_assessment_columns.py  b9189088c385_initial_schema.py  ec66654a8218_add_diagnostic_engine_tables.py  f7ad39986104_add_clerk_org_id_to_organizations.py  ff0f18c93fb3_add_diagnostic_reviews.py
apps/api/scripts/: seed_taxonomy.py
apps/api/src/grade_sight_api/: __init__.py  config.py  main.py
apps/api/tests/: conftest.py
apps/api/tests/auth/: test_dependencies.py  test_lazy_upsert_cleanup.py  test_sentry_user_context.py
apps/api/tests/models/: test_answer_key_page.py  test_assessment_diagnosis.py  test_assessment_page.py  test_diagnostic_review.py  test_taxonomy_models.py
apps/api/tests/routers/: test_answer_keys_router.py  test_assessments_router.py  test_billing_prices_router.py  test_classes_router.py  test_diagnostic_reviews_router.py  test_error_patterns_router.py  test_me_router.py  test_students_router.py
apps/api/tests/seed/: test_taxonomy_seed.py
docs/: APP_STATE_FOR_DESIGN.md  (+3 more)
(+323 files in other folders)
